- fix dropshadow not working on mobile

--- a/docs/assets/css/style.css
+++ b/docs/assets/css/style.css
@@ -43,4 +43,6 @@
 
 .image-card picture {
 	box-shadow: 0 3.2px 7.2px 0 rgba(0,0,0,.132), 0 0.6px 1.8px 0 rgba(0,0,0,.208);
+	display: block;
+	position: relative;
 }
